--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hal/STM32F10x_ABLib"]
 	path = hal/STM32F10x_ABLib
-	url = https://github.com/rushairer/STM32F10x_ABLib.git
+	url = git@github.com:rushairer/STM32F10x_ABLib.git
